--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ canvas{
   height: 100%;
   position: fixed;
   /*bg color*/
-  background-color: #CCFF43;
+  background-color: #DFFFA3;
   background-image: url('');
   background-size: cover;
   background-position: 50% 50%;
