--- a/style.css
+++ b/style.css
@@ -1,38 +1,67 @@
-html,body{margin:0;padding:0;border:0;outline:0;font-size:100%;vertical-align:baseline;background:transparent}
-body{line-height:1}
-
-/* ---- base ---- */
-
-html,body{ 
-	width:100%;
-	height:100%;
-	background:#111;
+a {
+	text-decoration: none;
+	color: none;
 }
-
-html{
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+body {
+	overflow-x: hidden;
+	margin: 0px;
+	padding: 0px;
 }
-
-body{
-  font:normal 75% Arial, Helvetica, sans-serif;
+p {
+	margin: 0px;
+	padding: 0px;
 }
-
-canvas{
-  display:block;
-  vertical-align:bottom;
+#_logo_img, #_logo_img_fly, #_logo_img_safety, #_logo_img_work, #_logo_img_study {
+	height: 25vw;
+	background-image: url("logo voyage.png");
+	background-position: center;
+	background-size: 100% 25vw;
 }
-
-/* ---- particles.js container ---- */
-
-#particles-js{
-  width: 100%;
-  height: 100%;
-  position: fixed;
-  /*bg color*/
-  background-color: #DFFFA3;
-  background-image: url('');
-  background-size: cover;
-  background-position: 50% 50%;
-  background-repeat: no-repeat;
-  overflow: auto;
+#_logo_img_fly {
+	background-image: url("https://avia.app/wp-content/uploads/2019/02/boeing787.jpg");
+	background-size: 100%;
+}
+#_logo_img_safety {
+	background-image: url("img_safety.jpg");
+	background-repeat: no-repeat;
+	background-size: 100%;
+}
+#_logo_img_work {
+	background-image: url("img_work.jpg");
+	background-size: 100%;
+}
+#_logo_img_study {
+	background-image: url("img_study.jpg");
+	background-size: 100%;
+}
+#log {
+	height: 280px;
+	background-color: #c3292d;
+	color: white;
+}
+#_1 {
+	padding: 50px;
+	box-shadow: 4px 4px 20px -3px black;
+	border-radius: 15px;
+	margin: 0 auto;
+	text-align: justify;
+	background-color: #EEEEEE;
+	margin-bottom: 50px;
+	margin-top: 50px;
+}
+#_1 h1 {
+	font-size: 2.3vw;
+	color: #c3292d;
+}
+#bottom {
+	height: 200px;
+	padding-top: 10px;
+	background-color: #555555;
+	color: white;
+	bottom: 0;
+}
+#log a {text-decoration: none; color: white;}
+#log a:hover {text-decoration: none; color: white;}
+.icon {
+	width: 200px;
 }
