--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 a {
-	text-decoration: none;
-	color: none;
+	text-decoration: none !important;
 }
 body {
 	overflow-x: hidden;
@@ -64,4 +63,30 @@ p {
 #log a:hover {text-decoration: none; color: white;}
 .icon {
 	width: 150px;
+}
+#back_botton {
+	padding: 10px;
+	box-shadow: 4px 4px 20px -3px black;
+	border-radius: 15px;
+	margin: 0 auto;
+	text-align: center;
+	background-color: #EEEEEE;
+	margin-bottom: 50px;
+}
+#back_botton h1 {
+	color: #2E2E2E;
+	transition: 1s;
+}
+#back_botton h1:hover {
+	color: black;
+	text-decoration: none;
+}
+.phones {
+	padding: 10px;
+	font-size: 0.8vw;
+	color: #c5292c;
+}
+.map {
+	width: 30vw;
+	height: 150px;
 }
